# sentinel-uav

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
docs/: interfaces.md  mission-roadmap.md  test-matrix.md
src/sentinel_uav_bringup/: CMakeLists.txt  package.xml
src/sentinel_uav_bringup/config/: mission_params.sim.yaml
src/sentinel_uav_bringup/launch/: m0_m1_bringup.launch.py  m2_control_abort.launch.py
src/sentinel_uav_bringup/src/: bringup_orchestrator.cpp
src/sentinel_uav_core/: CMakeLists.txt  package.xml
src/sentinel_uav_core/src/: control_node.cpp  observer_node.cpp
